refactor(file-storage): 移除 AbstractChunkedUploadTemplate 并优化上传下载逻辑
- 删除 AbstractChunkedUploadTemplate 及相关模板创建逻辑，简化类结构
- 采用 try-with-resources 优化文件流处理，防止资源泄露
- 下载时增加对响应已提交状态的错误处理和日志记录
- 批量删除使用并发安全集合，提升并发性能
- 头部设置时编码文件名，支持特殊字符和空格
- 使用 retryHelper 包裹上传和下载操作，增强重试能力

feat(docs): 优化异步文档解析及自动配置健康检查

- 限制异步文档解析批量提交大小，防止队列积压
- 添加 DocsHealthIndicator 自动装配及依赖条件
- DocsProperties 新增 watermarkFontPath 配置项支持自定义水印字体路径

feat(docs-convert): 扩展文档转换支持及单元格处理

- 支持 XLS 旧格式及 Macro-enabled 文件格式（DOCM, XLSM, PPTM）
- Excel 单元格值转换改进，支持日期格式和数值格式优化
- 添加 PDF 转纯文本功能，通过 PdfDocumentParser 委托实现
- 统一单元格字符串获取方法，供转换和解析共享

fix(security-pii): 银行卡检测增加 BIN 前缀校验

- 增加已知银行卡 BIN 前缀集合，覆盖主流发卡机构
- 校验检测到的银行卡号前4位是否在已知 BIN 前缀中，提高识别准确率

refactor(docs-indexer): 使用 ContentExtractor 替代反射调用 DocumentService

- 通过 ContentExtractor 接口注入解析器，取消对 common-docs 的硬依赖和反射调用
- 调整内容截断逻辑，最大索引内容长度为 100KB
- isAvailable 判断从 documentService 改为 contentExtractor 的可用状态

fix(docs-parser-registry): 完善解析器格式注册机制

- 注册主解析格式外，添加 parser.supports() 中支持的额外格式注册
- 避免同一格式被不同解析器覆盖警告时出现误报，检查替换解析器一致性

fix(docs-security-scanner): 过滤 Composite 自身，防止递归调用

- 根据扫描器名称判断而非引用，避免误过滤非Composite实例
- 过滤时排除名称为 "composite" 的扫描器，实现安全扫描器组合

perf(docs-converter): 优化 convertExcelToText 性能和代码可读性

- 使用明确类型声明和标准库方法，提升代码清晰度和维护性
- 改进日期格式化和数值转字符串逻辑

style(docs): 调整文档及配置代码格式和注释

- 优化注释排版，增强代码可读性
- 调整导入顺序，去除未使用的导入和多余的空行